--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no">
-    <title>设备管理系统</title>
+    <title>设备管家</title>
   </head>
   <body>
     <div id="app"></div>
